# saltext-elasticsearch

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
docs/: all.rst  conf.py  index.rst
docs/ref/: modules.rst  states.rst
docs/ref/modules/: all.rst  index.rst  saltext.elasticsearch.modules.__init__.rst  saltext.elasticsearch.modules.elasticsearch6_mod.rst  saltext.elasticsearch.modules.elasticsearch8_mod.rst  saltext.elasticsearch.modules.elasticsearch_mod.rst  saltext.elasticsearch.modules.es_module_6.rst  saltext.elasticsearch.modules.es_module_8.rst  saltext.elasticsearch.modules.rst
docs/ref/returners/: all.rst  index.rst  saltext.elasticsearch.returners.elasticsearch6_mod.rst  saltext.elasticsearch.returners.elasticsearch8_mod.rst  saltext.elasticsearch.returners.rst
docs/ref/states/: all.rst  index.rst  saltext.elasticsearch.states.__init__.rst  saltext.elasticsearch.states.elasticsearch_mod.rst
docs/topics/: installation.md
requirements/py3.6/: tests.txt
requirements/py3.7/: tests.txt
requirements/py3.8/: tests.txt
requirements/py3.9/: docs.txt  tests.txt
src/saltext/elasticsearch/: loader.py
src/saltext/elasticsearch/modules/: elasticsearch6_mod.py  elasticsearch8_mod.py  elasticsearch_mod.py  es_module_6.py  es_module_8.py
src/saltext/elasticsearch/returners/: elasticsearch6_mod.py  elasticsearch8_mod.py  elasticsearch_mod.py
src/saltext/elasticsearch/states/: elasticsearch_mod.py
tests/: conftest.py
tests/functional/modules/: test_elasticsearch.py
tests/functional/states/: test_elasticsearch.py
tests/integration/modules/: test_elasticsearch.py
tests/support/: mock.py  unit.py
tests/support/esmockutils/: elasticsearch_mock.py  elasticsearch_mock8.py
tests/unit/modules/: test_elasticsearch.py
tests/unit/returners/: test_elasticsearch.py
tests/unit/states/: test_elasticsearch.py
