[metadata]
name = saltext.elasticsearch
description = 'Elasticsearch extension'
long_description = file: README.md
long_description_content_type = text/markdown
author = Cesar Sanchez
author_email = cesan3@gmail.com
keywords = salt-extension
url = http://github.com/cesan3/salt-ext-elasticsearch
project_urls =
    Source=http://github.com/cesan3/salt-ext-elasticsearch
    Tracker=http://github.com/cesan3/salt-ext-elasticsearch/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3004.1
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  states_dirs = saltext.elasticsearch.loader:get_states_dirs
#
#  module_dirs = saltext.elasticsearch.loader:get_module_dirs
#
#  returner_dirs = saltext.elasticsearch.loader:get_returner_dirs
#

[options.entry_points]
salt.loader=
  saltext.elasticsearch = saltext.elasticsearch


[options.extras_require]
tests =
  mock >= 3.0.0
  docker
  pytest >= 7.2.0
  pytest-salt-factories >= 1.0.0rc27
  pytest-helpers-namespace >= 2019.1.8
  pytest-subtests
  pytest-timeout
  pytest-httpserver
  pytest-custom-exit-code >= 0.3
  flaky
  more-itertools
dev =
  nox==2021.6.12
  pre-commit==2.13.0
  pylint
  SaltPyLint
docs =
  furo
  enchant
  sphinx
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  requests
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
